# AI-Canvas

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LangCanvas_project_blueprint.md  README.md  pyproject.toml
backend/: config.py  main.py
backend/agents/: canvas_agent.py  doc_agent.py  explainer_agent.py  graph.py  planner_agent.py  research_agent.py  state.py  visualizer_agent.py
backend/db/: checkpointer.py
backend/llm/: __init__.py  content.py  factory.py
backend/skills/: canvas_scene_skill.md  canvas_skill.md  excalidraw_skill.md  explainer_skill.md  planner_skill.md  synthesis_skill.md
backend/tools/: context7_tools.py  excalidraw_builder.py  github_research_tools.py  link_resolver.py  mcpdoc_tools.py  research_registry.py  web_research_tools.py
docs/: COMMIT_HISTORY.md  PR_V1_AI_CANVAS_FOUNDATION.md  PR_V2_COMPLETE.md  PR_V2_RESEARCH_AND_BYOK.md  RUN_GUIDE.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Canvas.tsx  InputBar.tsx  SessionSidebar.tsx  SettingsPanel.tsx
frontend/app/lib/: canvas-utils.ts  sse.ts
